--- a/Es/meteo/src/App.css
+++ b/Es/meteo/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -20,6 +16,55 @@
 
 .App-link {
   color: #61dafb;
+}
+
+#title{
+  text-align: center;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-size: 30px;
+}
+
+body{
+  background-image: url("img/clear_day.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+input{
+  font-size:18px;
+  width:300px;
+  border:none;
+  border-bottom:2px solid #757575;
+}
+
+button{
+  background-color: white; 
+  border: 2px solid #4CAF50;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+button:hover {
+    background-color: #4CAF50;
+    color: white;
+}
+
+p{
+  font-size: 20px;
+  font-family:"Comic Sans MS", cursive, sans-serif;
+  color: white;
+  text-shadow: 2px 2px #4CAF50;
+}
+
+.text{
+   text-shadow: 2px 2px #000000;
 }
 
 @keyframes App-logo-spin {
